<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_payment">

    <fragment
        android:id="@+id/navigation_payment"
        android:name="com.example.spike_exercise.ui.payment.LandlordPaymentFragment"
        android:label="@string/title_rent"
        tools:layout="@layout/fragment_tenant_payment" />

    <fragment
        android:id="@+id/navigation_maintenance"
        android:name="com.example.spike_exercise.ui.maintenance.LandlordMaintenanceFragment"
        android:label="@string/title_maintenance"
        tools:layout="@layout/fragment_landlord_maintenance" />

    <fragment
        android:id="@+id/navigation_apply"
        android:name="com.example.spike_exercise.ui.apply.LandlordApplicationFragment"
        android:label="@string/title_applications"
        tools:layout="@layout/fragment_landlord_application" />
</navigation>